[metadata]
name = PySAR
author = Adam McKenna
author_email = amckenna41@qub.ac.uk
version = 2.0.6
description = Analysing Sequence Activity Relationships (SARs) of protein sequences and their mutants using Machine Learning (pySAR).
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
zip_safe = false
packages = find:

install_requies =
   numpy; python_version == "1.16.6"
   pandas
   scipy
   delayed
   scikit-learn; python_version == "0.24.1"
   requests
   matplotlib
   seaborn
   tqdm
   varname
   biopython
   aaindex

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-flake8
    pytest-timeout
docs =
    sphinx

[tool:pytest]
norecursedirs = /docs/_build/*
