[metadata]
name = PySAR
version = 2.3.1
description = Analysing Sequence Activity Relationships (SARs) of protein sequences and their mutants using Machine Learning.
author = AJ McKenna
author_email = amckenna41@qub.ac.uk
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amckenna41/pySAR
download_url = https://github.com/amckenna41/pySAR/archive/refs/heads/main.zip
license = MIT
maintainer = AJ McKenna
keywords = 
    bioinformatics
    protein engineering
    python
    pypi
    machine learning
    directed evolution
    sequence activity relationships
    SAR
    aaindex
    protpy
    protein descriptors

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
zip_safe = false
packages = find:
python_requires = >=3.6
include_package_data = True

install_requies =
   numpy
   pandas
   scipy
   delayed
   scikit-learn
   matplotlib
   seaborn
   tqdm
   aaindex
   protpy

[options.extras_require]
test_suite = tests
test =
    pytest
    pytest-cov
    pytest-flake8
    pytest-timeout
docs =
    sphinx

[tool:pytest]
norecursedirs = /docs/_build/*

[metadata]
license_files = LICENSE